# c-collections

./: .gitignore  CMakeLists.txt  README.md  collections.h  declarations.h  dictionary.h  linked_list.h  list.h  main.c  queue.h  stack.h
collections_source/: collections_generic.h  linked_list.c  list.c
examples/: dictionary_usage.c  linked_list_usage.c  list_usage.c  queue_usage.c  stack_usage.c
include/: collections.h  collections_declarations.h
libcollections_source/: collections_generic.h  dictionary.c  list.c  queue.c  stack.c
source/: dictionary.c  linked_list.c  list.c  queue.c  stack.c
usages/: queue_usage.c  stack_usage.c
